split validation/compilation/prelaunch from launch timings, gets 1M rainbow down to 0.29s in compute mode

--- a/graphics/openmeshrap/CMakeLists.txt
+++ b/graphics/openmeshrap/CMakeLists.txt
@@ -36,11 +36,13 @@ add_definitions(
 add_library( ${name}  SHARED
      MWrap.cc
      MTool.cc
+     MFixer.cc
 ) 
 
 set(hdrs
      MWrap.hh
      MTool.hh
+     MFixer.hh
 )
 
 
