--- a/graphics/openmeshrap/CMakeLists.txt
+++ b/graphics/openmeshrap/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(Boost REQUIRED)
 find_package(GLM    REQUIRED)
 find_package(NPY REQUIRED)
 find_package(GGeo REQUIRED)
+find_package(Opticks REQUIRED)
 find_package(OpenMesh REQUIRED)
 
 include_directories(
@@ -21,6 +22,7 @@ include_directories(
    ${Boost_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS} 
+   ${Opticks_INCLUDE_DIRS} 
    ${GGeo_INCLUDE_DIRS} 
    ${OpenMesh_INCLUDE_DIRS} 
 )
@@ -29,6 +31,7 @@ add_definitions(
    ${OpenMesh_DEFINITIONS}
    ${GLM_DEFINITIONS}
    ${NPY_DEFINITIONS}
+   ${Opticks_DEFINITIONS}
    ${GGeo_DEFINITIONS}
    ${Boost_DEFINITIONS}
 )
@@ -50,6 +53,7 @@ set(LIBRARIES
     ${OpenMesh_LIBRARIES}
     ${GLM_LIBRARIES}
     ${NPY_LIBRARIES}
+    ${Opticks_LIBRARIES}
     ${GGeo_LIBRARIES}
     ${Boost_LIBRARIES}
 )
