Split of StateGUI jacket for State in prep for moving State and Configurable to npy- NState NConfigurable, positioning by dependencies not semantics maximises reusability

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -102,6 +102,7 @@ add_library( ${name}  SHARED
                 ClipperCfg.cc
                 Bookmarks.cc
                 State.cc
+                StateGUI.cc
                 Demo.cc
                 Prog.cc
                 Shdr.cc
@@ -138,6 +139,7 @@ SET(hdrs
         ClipperCfg.hh
         Bookmarks.hh
         State.hh
+        StateGUI.hh
         Demo.hh
         gleq.h
         Prog.hh
