flatten/serialize the CSG tree in csg.py and bring into C++ ggeo- via GPmt/GCSG

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -89,6 +89,7 @@ add_library(${name} SHARED
                 GAttrSeq.cc
                 GMeshFixer.cc
                 GParts.cc
+                GCSG.cc
                 GPmt.cc
                 GMaker.cc
                 GCIE.cc
@@ -141,6 +142,7 @@ GItemList.hh
 GAttrSeq.hh
 GMeshFixer.hh
 GParts.hh
+GCSG.hh
 GPmt.hh
 GMaker.hh
 GCIE.hh
