PMT edge skimmer debugging reveals material property difference for MO

--- a/optix/cfg4/CMakeLists.txt
+++ b/optix/cfg4/CMakeLists.txt
@@ -102,4 +102,4 @@ target_link_libraries(${name}test ${name} ${LIBRARIES})
 
 install(TARGETS ${name}test    DESTINATION bin)
 
-
+add_subdirectory(tests)
