adopt enum for GeoCodes rather than uncontrolled char

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -20,7 +20,7 @@ include(EnvBuildOptions)
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
 find_package(GLM  REQUIRED)
-find_package(GGeo REQUIRED)  # bit reluctant on this 
+find_package(GGeo REQUIRED)  
 find_package(Boost REQUIRED) 
 find_package(Cfg REQUIRED) 
 find_package(PPM REQUIRED) 
