increasing BOUNDARY_NUM_PROP from 4 to 8 to support GROUPVEL, currently running into memory corruption in OScintillatorLib reemission texture creation

--- a/graphics/optixrap/CMakeLists.txt
+++ b/graphics/optixrap/CMakeLists.txt
@@ -197,5 +197,4 @@ install(FILES ${cuptxs} DESTINATION ptx)
 install(FILES ${hdrs}   DESTINATION include)
 install(FILES ${cuhdrs} DESTINATION include/cu)
 
-
-
+add_subdirectory(tests)
