revive no-OptiX visualization

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -20,27 +20,95 @@ set(BUILD_SHARED_LIBS ON)
 include(Macros)
 include(CompilerInfo)
 include(ConfigCompilerFlags)
+
 OPTION(CUDA_REMOVE_GLOBAL_MEMORY_SPACE_WARNING "Suppress the \"Advisory: Cannot tell what pointer points to, assuming global memory space\" warning nvcc makes." ON)
+
 if(USING_CLANG_C)
   set(CUDA_HOST_COMPILER "clang" CACHE FILEPATH "Host side compiler used by NVCC")
 endif()
 
 OPTION(NPYSERVER "using the numpyserver." OFF)
+OPTION(OPTIX     "using OPTIX." OFF)
 
 if (NPYSERVER)
-    add_definitions(-DNPYSERVER)
+    message("with NPYSERVER") 
+    #add_definitions(-DNPYSERVER)
+else()
+    message("without NPYSERVER") 
 endif()
 
-find_package(OptiX REQUIRED)
-find_package(CUDA 2.3 REQUIRED)
+
+if(OPTIX)
+    find_package(OptiX REQUIRED)
+
+    add_definitions(-DWITH_OPTIX)
+    find_package(CUDA 2.3 REQUIRED)
+
+    ## c++11 forced by AsioZMQ   needs to come after OptiX
+    if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -stdlib=libc++")
+    else ()
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++0x")
+    endif ()
+
+    find_package(OptiXRap REQUIRED)
+    find_package(CUDAWrap REQUIRED)
+    find_package(ThrustRap REQUIRED)
+    find_package(OpticksOp REQUIRED)
+    find_package(OpticksGL REQUIRED)
 
 
-## c++11 forced by AsioZMQ   needs to come after OptiX
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -stdlib=libc++")
-else ()
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++0x")
-endif ()
+    set(OPTIONAL_INCLUDE_DIRS
+
+       ${CUDA_INCLUDE_DIRS}
+       ${OptiX_INCLUDE}  
+       ${OptiXRap_INCLUDE_DIRS}  
+       ${CUDAWrap_INCLUDE_DIRS}  
+       ${ThrustRap_INCLUDE_DIRS}
+       ${OpticksOp_INCLUDE_DIRS} 
+       ${OpticksGL_INCLUDE_DIRS} 
+
+    )
+
+    set(OPTIONAL_DEFINITIONS
+
+       ${CUDA_DEFINITIONS} 
+       ${OptiX_DEFINITIONS} 
+       ${OptiXRap_DEFINITIONS} 
+       ${CUDAWrap_DEFINITIONS}
+       ${ThrustRap_DEFINITIONS}
+       ${OpticksOp_DEFINITIONS}
+       ${OpticksGL_DEFINITIONS}
+
+    )
+
+    set(OPTIONAL_LIBRARIES
+
+      optix
+      optixu
+
+      ${OptiXRap_LIBRARIES}
+      ${CUDA_LIBRARIES}
+      ${CUDAWrap_LIBRARIES}
+      ${ThrustRap_LIBRARIES}
+      ${OpticksOp_LIBRARIES}
+      ${OpticksGL_LIBRARIES}
+
+      ssl
+      crypto 
+   )
+
+
+
+
+else()
+   message("Operating without OPTIX ")
+
+   set(OPTIONAL_INCLUDE_DIRS) 
+   set(OPTIONAL_DEFINITIONS) 
+   set(OPTIONAL_LIBRARIES) 
+
+endif()
 
 
 ########### using env/cmake/Modules/*.cmake #####
@@ -49,14 +117,32 @@ find_package(Boost REQUIRED)
 find_package(GLM  REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
-
-
 find_package(OGLRap REQUIRED)
 
 if (NPYSERVER)
-find_package(ZMQ REQUIRED)  
-find_package(AsioZMQ REQUIRED)
-find_package(NumpyServer REQUIRED)
+    find_package(ZMQ REQUIRED)  
+    find_package(AsioZMQ REQUIRED)
+    find_package(NumpyServer REQUIRED)
+
+    set(NPYSERVER_INCLUDE_DIRS
+       ${ZMQ_INCLUDE_DIRS} 
+       ${AsioZMQ_INCLUDE_DIRS} 
+       ${NumpyServer_INCLUDE_DIRS} 
+    )
+    set(NPYSERVER_DEFINITIONS
+      ${ZMQ_DEFINITIONS}
+      ${NumpyServer_DEFINITIONS} 
+    )
+    set(NPYSERVER_LIBRARIES
+      ${ZMQ_LIBRARIES}
+      ${NumpyServer_LIBRARIES}
+   )
+
+else()
+    set(NPYSERVER_INCLUDE_DIRS)
+    set(NPYSERVER_DEFINITIONS)
+    set(NPYSERVER_LIBRARIES)
+
 endif()
 
 find_package(NPY   REQUIRED)
@@ -71,12 +157,6 @@ find_package(GGeo REQUIRED)
 find_package(ImGui REQUIRED)
 find_package(Bregex REQUIRED)
 
-find_package(OptiXRap REQUIRED)
-find_package(CUDAWrap REQUIRED)
-find_package(ThrustRap REQUIRED)
-find_package(OpticksOp REQUIRED)
-find_package(OpticksGL REQUIRED)
-
 
 set(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}
@@ -84,9 +164,7 @@ set(INCLUDE_DIRS
    ${GLFW_INCLUDE_DIRS} 
    ${OGLRap_INCLUDE_DIRS} 
    ${Boost_INCLUDE_DIRS} 
-   ${ZMQ_INCLUDE_DIRS} 
-   ${AsioZMQ_INCLUDE_DIRS} 
-   ${NumpyServer_INCLUDE_DIRS} 
+
    ${NPY_INCLUDE_DIRS} 
    ${Cfg_INCLUDE_DIRS} 
    ${Opticks_INCLUDE_DIRS} 
@@ -99,15 +177,9 @@ set(INCLUDE_DIRS
    ${ImGui_INCLUDE_DIRS}
    ${Bregex_INCLUDE_DIRS}
 
-   ${CUDA_INCLUDE_DIRS}
-   ${OptiX_INCLUDE}  
-   ${OptiXRap_INCLUDE_DIRS}  
-   ${CUDAWrap_INCLUDE_DIRS}  
-   ${ThrustRap_INCLUDE_DIRS}
-   ${OpticksOp_INCLUDE_DIRS} 
-   ${OpticksGL_INCLUDE_DIRS} 
+   ${NPYSERVER_INCLUDE_DIRS}
+   ${OPTIONAL_INCLUDE_DIRS}
 )
-
 
 
 set(DEFINITIONS
@@ -123,29 +195,22 @@ set(DEFINITIONS
    ${Bregex_DEFINITIONS}
    ${Opticks_DEFINITIONS}
 
-   ${OptiX_DEFINITIONS} 
-   ${OptiXRap_DEFINITIONS} 
-   ${CUDAWrap_DEFINITIONS}
-   ${ThrustRap_DEFINITIONS}
-   ${OpticksOp_DEFINITIONS}
-   ${OpticksGL_DEFINITIONS}
+   ${NPYSERVER_DEFINITIONS}
+   ${OPTIONAL_DEFINITIONS}
 )
 
 
-
 set(LIBRARIES 
-
-      optix
-      optixu
 
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
       ${OGLRap_LIBRARIES}
       ${Boost_LIBRARIES}
-      ${ZMQ_LIBRARIES}
+
+
       ${Cfg_LIBRARIES}
       ${Opticks_LIBRARIES}
-      ${NumpyServer_LIBRARIES}
+
       ${NPY_LIBRARIES}
 
       ${Assimp_LIBRARIES} 
@@ -157,15 +222,8 @@ set(LIBRARIES
       ${ImGui_LIBRARIES}
       ${Bregex_LIBRARIES}
 
-      ${OptiXRap_LIBRARIES}
-      ${CUDA_LIBRARIES}
-      ${CUDAWrap_LIBRARIES}
-      ${ThrustRap_LIBRARIES}
-      ${OpticksOp_LIBRARIES}
-      ${OpticksGL_LIBRARIES}
-
-      ssl
-      crypto 
+      ${NPYSERVER_LIBRARIES}
+      ${OPTIONAL_LIBRARIES}
 )
 
 
